# template_actix

./: .env  Cargo.toml  README.md
src/: endpoint.rs  lib.rs  main.rs
src/common/: log_config.rs
src/controller/: core.rs
src/endpoint/: example.rs  metrics.rs  ws.rs
src/errcode/: mod.rs
tests/: test_check.rs
