[package]
name = "template_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4.9", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-cors = "0.7.0"
futures-util = "0.3.30"
actix-session = { version = "0.10", features = ["cookie-session"]}
actix-ws = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
dotenvy = "0.15.6"
